# trading-lab

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
docs/: alpha_control_plane.md  blockchain_alpha.md  manual_import_schema.md  provider_short_support.md  revolut_x_memory.md  revolut_x_setup.md  strategy_versions.md  system_architecture.md
macos/: TradingDeskCompanion.swift
scripts/: accept_experiment_baseline.py  analyze_filter_audit.py  analyze_trade_performance.py  apri_trading_desk.command  export_daily_reports.py  generate_linkedin_carousel.py  generate_linkedin_experiment_card.py  generate_revolut_x_keys.sh  install_launch_agents.py  reset_experiment_baseline.py  reset_paper_session.py  run_dashboard.py  run_desk_companion.py  run_public_bot.py  run_swift_companion.sh  smoke_test.py  uninstall_launch_agents.py
src/hyperliquid/: __init__.py  client.py
src/revolut_x/: __init__.py  client.py
src/trading_bot/: __init__.py  blockchain.py  config.py  dashboard.py  desktop_widget.py  onchain_sync.py  paper_engine.py  providers.py  public_bot.py  risk_manager.py  storage.py
